# PyHRG

./: .pre-commit-config.yml  LICENSE  README.md  pyproject.toml
src/pyhrg/: hrg.py
